--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="src/main/js/config.js"></script>
+    <link rel="stylesheet" href="/src/app/css/bootstrap.min.css">
 </head>
 
 <body>
-    <div ng-app="tofi">
+    <div ng-app="tofi" class="container" style="padding-top:20px;">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">belphin</a>
+          </div>
+          <p class="navbar-text">belarusian finace</p>
+        </div>
+      </nav>
+      <div class="container-fluid">
         <ui-view></ui-view>
+      </div>  
     </div>
 </body>
 </html>
