--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">belphin</a>
+            <a class="navbar-brand" href="#">
+              <span><img src="/src/app/img/logo-icon.png" style="width:20px; height:20px;"></span>
+              <span>
+              belphin</span>
+            </a>
           </div>
           <p class="navbar-text">belarusian finace</p>
         </div>
@@ -28,6 +26,11 @@
       <div class="container-fluid">
         <ui-view></ui-view>
       </div>  
+      <footer class="footer">
+      <div class="container" style="padding-top: 40px;">
+        <p class="text-muted">Belphin. Copyright Belyashi inc. 2016.</p>
+      </div>
+    </footer>
     </div>
 </body>
 </html>
