--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Belphin</title>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     
     <script src="src/main/js/config.js"></script>
     
